--- a/TextareaTest/Components/MyTextArea.razor
+++ b/TextareaTest/Components/MyTextArea.razor
@@ -18,7 +18,7 @@
     box-sizing: border-box;
     padding: 2px;
     width: 100%;
-    white-space: pre-line
+    white-space: pre-line;
 }
 
     .textarea-container > textarea {
