--- a/TextareaTest/Components/MyTextArea.razor
+++ b/TextareaTest/Components/MyTextArea.razor
@@ -1,6 +1,6 @@
 ﻿<div class="textarea-container">
     <textarea @bind="Value" @bind:event="oninput" @onkeyup="@AutoResize"/>
-    @copyElement;
+    @copyElement
 </div>
 
 <style>
